Switch datetime constructors to fastpath, fix bpo-32404